tests/baselines/reference/conflictingTypeAnnotatedVar.errors.txt
==== tests/cases/compiler/conflictingTypeAnnotatedVar.ts (4 errors) ====
    var foo: string;
    function foo(): number { }
             ~~~
!!! error TS2000: Duplicate identifier 'foo'.
                    ~~~~~~
!!! error TS2131: Function declared a non-void return type, but has no return expression.
    function foo(): number { }
             ~~~
!!! error TS2000: Duplicate identifier 'foo'.
                    ~~~~~~
!!! error TS2131: Function declared a non-void return type, but has no return expression.